fixing header spacing in appendices

--- a/regulations/static/regulations/css/less/typography.less
+++ b/regulations/static/regulations/css/less/typography.less
@@ -280,14 +280,10 @@ a:visited {
     text-indent: -.94em; /* outdent the § symbol */
 }
 
-.appendix-heading {
-    .reset;
-}
-
 /* for a header with no following content */
 
 .empty-header {
-    margin-bottom: 1em; 
+    margin-bottom: 2em; 
 }
 
 /*  Sub Headings
